# docs-bridge

./: .dockerignore  .gitignore  README.md  config.example.yaml  docs-bridge-ansible-design.md  pyproject.toml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  pi5.yml
ansible/playbooks/: site.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/container_runtime/tasks/: main.yml
docs/: architecture.md  configuration.md  data-model.md  embeddings.md  ingestion.md  retrieval.md  server.md
images/docs-bridge/: Dockerfile
images/ingest-worker/: .dockerignore  Dockerfile  Dockerfile.onnx  README.md  config.example.yaml  eval-onnx.sh  pyproject.toml
images/ingest-worker/src/ingest_worker/: __init__.py  config.py  embed.py  embed_onnx.py  parse.py  qdrant_io.py  sync.py
images/ingest-worker/tools/: export_bge_m3_onnx.py  reembed_to_collection.py  retrieval_parity.py  validate_embed_parity.py
images/qdrant/: Dockerfile  README.md
provisioning/: 00-decisions.md  01-os-swap-runbook.md  02-host-prep.md  os-swap.md
src/docs_bridge/: __init__.py  cli.py  config.py  embed.py  manifest.py  models.py  parse.py  qdrant_io.py  rerank.py  rest.py  search.py  server.py  sync.py
tools/: README.md  bench_search.py
tools/eval/: README.md  diag_channels.py  recall_topn.py  reembed_to_collection.py  retrieval_parity.py  validate_embed_parity.py  validate_union.py
tools/ingest/: README.md  doxy2md.py  ingest-copy-doxygen.sh  ingest-copy-javadoc.sh  ingest-copy.sh  ingest-flip-tag.sh  ingest-prune.sh  javadoc2md.py  nextcloud-import.sh  resume-embed.sh  run-ingest.sh  soa-libs-index.py  wsdl2md.py
tools/onnx-export/: README.md  export_bge_m3_onnx.py  export_bge_reranker_onnx.py
