[project]
name = "docs-bridge"
version = "0.1.0"
description = "docs-bridge RAG core: shared by the ingest-worker (Docling parse -> BGE-M3 embed -> Qdrant) and the docs-bridge server (hybrid search -> rerank -> MCP/REST)."
requires-python = ">=3.11"

# Base deps = everything the SHARED core needs (config, the ONNX/INT8 embedder,
# Qdrant access). Both images install this; the heavy, image-specific deps live in
# the extras below so each image stays lean:
#   ingest-worker  ->  .[ingest]   (Docling + FlagEmbedding/torch fallback)
#   docs-bridge    ->  .[server]   (FastMCP + uvicorn; no torch, no Docling)
# The exporter Dockerfile stages add .[export] to bake the INT8 models, then are
# discarded. Pins are deliberate: "whatever runs on the Pi ships to the M2" (§1);
# both hosts are aarch64 so these resolve to the same wheels on both.
dependencies = [
    "numpy>=1.26,<2",                   # <2: docling/FlagEmbedding stack expects it
    "onnxruntime==1.20.1",              # the INT8 embed + rerank runtime
    "tokenizers==0.20.3",               # MUST match what ingest tokenized with, or
                                        # query vectors drift from doc vectors. In
                                        # range for transformers 4.44-4.46 (FlagEmbedding 1.3.3).
    "qdrant-client==1.12.1",            # named dense vector + sparse vector
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
# ingest-worker image: Docling stack must be pinned as a SET (docling 2.15.1 imports
# APIs newer docling-core moved/removed; all ~2025-01-10). torch arrives via these
# and powers Docling + the FlagEmbedding fallback embed backend.
ingest = [
    "docling==2.15.1",                  # PDF/HTML/DOCX -> structure-aware chunks
    "docling-core[chunking]==2.14.0",   # chunker (HybridChunker); 2.15.1's match
    "docling-ibm-models==3.1.2",        # layout/OCR models loader
    "docling-parse==3.0.0",             # PDF backend
    "FlagEmbedding==1.3.3",             # BGE-M3 dense+sparse (fallback backend)
    "torch==2.5.1",                     # CPU; Docling + FlagEmbedding backend
]

# docs-bridge server image: the MCP + REST surface. No torch/Docling at RUNTIME —
# query embedding + rerank go through onnxruntime against the baked INT8 models.
# Pins validated by a local py3.11 framework smoke (2026-06-21): build_app mounts
# mcp.http_app(path="/mcp") + .lifespan, the bearer gate enforces 401 on REST+MCP,
# and tools/list returns [list_subjects, search] over HTTP. Re-confirm on the Pi.
server = [
    "fastmcp==2.14.7",                  # MCP server (streamable-http) + @mcp.tool
    "uvicorn[standard]==0.49.0",        # ASGI server for MCP + REST mirror
]

# Build-time only (exporter Dockerfile stages): torch+transformers come from
# .[ingest], so the exporter installs .[ingest,export] to reproduce the exact env
# that produced the validated bge-m3 INT8 model.
export = ["onnx>=1.17"]

[project.scripts]
ingest = "docs_bridge.cli:main"
docs-bridge-server = "docs_bridge.server:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
