[project]
name = "ingest-worker"
version = "0.1.0"
description = "docs-bridge two-pass ingestion: Docling parse -> SQLite manifest -> BGE-M3 embed -> Qdrant upsert (hash-delta, self-updating)"
requires-python = ">=3.11"

# Pins are deliberate: "whatever runs on the Pi is what ships to the M2" (design §1).
# Both hosts are aarch64 Linux, so these resolve to the same wheels on both.
# Verify library APIs (Docling chunker, FlagEmbedding encode kwargs, qdrant-client
# sparse-vector model) against THESE versions before bumping.
dependencies = [
    "docling==2.15.1",            # PDF/HTML/DOCX -> structure-aware chunks
    "FlagEmbedding==1.3.3",       # BGE-M3 dense+sparse in one model
    "torch==2.5.1",               # CPU; FlagEmbedding backend
    "qdrant-client==1.12.1",      # named dense vector + sparse vector
    "PyYAML==6.0.2",
]

[project.scripts]
ingest = "ingest_worker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
