[project]
name = "ingest-worker"
version = "0.1.0"
description = "docs-bridge two-pass ingestion: Docling parse -> SQLite manifest -> BGE-M3 embed -> Qdrant upsert (hash-delta, self-updating)"
requires-python = ">=3.11"

# Pins are deliberate: "whatever runs on the Pi is what ships to the M2" (design §1).
# Both hosts are aarch64 Linux, so these resolve to the same wheels on both.
# Verify library APIs (Docling chunker, FlagEmbedding encode kwargs, qdrant-client
# sparse-vector model) against THESE versions before bumping.
dependencies = [
    # The docling stack must be pinned as a SET: docling 2.15.1 imports APIs that
    # newer docling-core moved/removed. These are the versions contemporaneous with
    # docling 2.15.1 (all from ~2025-01-10); leaving them open lets pip pull
    # incompatible later releases (e.g. docling-core dropping legacy_doc BoundingBox).
    "docling==2.15.1",                  # PDF/HTML/DOCX -> structure-aware chunks
    "docling-core[chunking]==2.14.0",   # chunker (HybridChunker); 2.15.1's match
    "docling-ibm-models==3.1.2",        # layout/OCR models loader
    "docling-parse==3.0.0",             # PDF backend
    "FlagEmbedding==1.3.3",             # BGE-M3 dense+sparse in one model
    "torch==2.5.1",                     # CPU; FlagEmbedding backend
    "qdrant-client==1.12.1",            # named dense vector + sparse vector
    "PyYAML==6.0.2",
]

# Optional backends/tooling. The base install is unchanged (FlagEmbedding/torch is
# the validated default). `onnx` adds the ONNX Runtime embed backend; `tokenizers`
# already ships transitively via FlagEmbedding/transformers. `export` is build-time
# only (tools/export_bge_m3_onnx.py) and never installed into the runtime image.
[project.optional-dependencies]
onnx = ["onnxruntime==1.20.1"]
export = ["optimum[exporters]>=1.23", "onnx>=1.17"]

[project.scripts]
ingest = "ingest_worker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
